<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CancerInfoFragment"
    android:background="#edfcfb"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arsenal_bold"
            android:text="@string/lung_cancer"
            android:textColor="#2E2A2A"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:textSize="20sp"
            android:text="@string/can_def"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_can"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_can_nam"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:layout_marginTop="8dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_can"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_can_def"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:layout_marginTop="8dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lc_can"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lc_can_def"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:layout_marginTop="8dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_lc"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:layout_marginTop="8dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_lc_nam"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:layout_marginTop="8dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ade"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ade_def"
            android:textColor="#2E2A2A"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/arsenal"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squ"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/squ_def"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:layout_marginTop="8dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lc"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lc_def"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:layout_marginTop="8dp"
            android:textSize="20sp"/>


    </LinearLayout>

</ScrollView>