<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edfcfb"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lung Cancer Detection App"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/info"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Outcomes:"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcomes"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developed By:"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developers"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guided By:"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal_bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Faculty"
            android:textColor="#2E2A2A"
            android:fontFamily="@font/arsenal"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>